k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: real-estate-app
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
