k8s/sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-deployment
  namespace: real-estate-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql
  template:
    metadata:
      labels:
        app: sql
    spec:
      containers:
      - name: sql
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: sql-service
  namespace: real-estate-app
spec:
  selector:
    app: sql
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
